--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -12,11 +12,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@better-auth/expo": "catalog:",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5",
+    "@myquo/env": "workspace:*",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.8.1",
+    "@tanstack/react-query": "catalog:",
+    "better-auth": "catalog:",
+    "dotenv": "catalog:",
     "expo": "^54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -27,12 +32,14 @@
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "heroui-native": "^1.0.0-beta.9",
+    "moti": "^0.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -42,12 +49,7 @@
     "tailwind-variants": "^3.2.2",
     "tailwindcss": "^4.1.18",
     "uniwind": "^1.2.2",
-    "@tanstack/react-query": "catalog:",
-    "better-auth": "catalog:",
-    "@better-auth/expo": "catalog:",
-    "dotenv": "catalog:",
-    "zod": "catalog:",
-    "@myquo/env": "workspace:*"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
