--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -29,7 +29,9 @@
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
     "expo-router": "~6.0.14",
+    "expo-clipboard": "~7.0.1",
     "expo-secure-store": "~15.0.7",
+    "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~3.0.8",
     "heroui-native": "^1.0.0-beta.9",
     "moti": "^0.30.0",
