--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@gorhom/bottom-sheet": "^5",
     "@myquo/env": "workspace:*",
+    "@react-native-async-storage/async-storage": "2.1.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.8.1",
     "@tanstack/react-query": "catalog:",
